chore: WIP docs revamp

--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -12,28 +12,39 @@ import {Aside} from '@astrojs/starlight/components';
 As an Open Source platform, Distr offers two deployment methods to suit different organizational needs:
 
 ### SaaS (Hosted by Distr)
-The fastest way to get started is with our fully-managed SaaS offering:
-- **Maximum flexibility** with immediate access to the latest features and updates
-- Simplified upgrade paths with zero maintenance overhead
-- Support for unlimited applications and customers
-- Single Sign-On (SSO) integration capabilities
-- Advanced credentials encryption for enhanced security
-- Enterprise-grade reliability with no platform management responsibilities
-- Flexible pricing based on usage
+
+The fastest way to get started. Our fully hosted offering includes:
+
+All in the free tier:
+- Up to 3 users
+- Basic license management
+- Unlimited deployments
+- Helm, Docker, and Terraform agents (Terraform coming soon)
+- Private registry (100 GB)
+- GitHub integration
+- Live metrics & logs (OpenTelemetry-compatible, no retention)
+- Distr API access
+- Immediate access to new features
+
+To check view the other plans go to the [pricing page here](https://glasskube.dev/pricing/).
 
 <Aside type="tip">
-  Get started immediately by creating your Distr account [here](https://signup.distr.sh) and following the onboarding tutorials.
+  Get started immediately by creating your free Distr account
+  [here](https://signup.distr.sh) and following the [onboarding tutorials](/docs/getting-started/quickstart/#getting-started-with-platform-tutorials).
 </Aside>
 
 ### Self-Hosted
-For organizations with specific compliance requirements or those who prefer to manage their own infrastructure:
-- Complete control over your deployment and version management
-- Deploy in your own cloud account or on-premises infrastructure
-- OCI-compatible container images for easy deployment and scaling
-- Full responsibility for platform availability and maintenance
-- Same features and capabilities as the SaaS offering
-- Ideal for users with strict data locality or compliance requirements
+
+Best for teams with compliance or infrastructure needs:
+
+- Deploy in your own cloud or on-prem
+- Full control over versioning and availability
+- Same features as SaaS
+- Ideal for data-sensitive or regulated environments
 
 <Aside type="note">
-  Self-hosted deployments use the same semantic versioning as our SaaS offering, making it easy to stay up-to-date with the latest features. For setup instructions, see our [Self-Hosting Guide](/docs/self-hosting/getting-started).
+  Self-hosted deployments use the same semantic versioning as our SaaS offering,
+  making it easy to stay up-to-date with the latest features. For setup
+  instructions, see our [Self-Hosting
+  Guide](/docs/self-hosting/getting-started).
 </Aside>
