--- a/src/content/docs/docs/use-cases/edge-deployments.mdx
+++ b/src/content/docs/docs/use-cases/edge-deployments.mdx
@@ -12,7 +12,7 @@ Edge Deployments enable vendors to manage software on decentralized, often resou
 
 Distr provides centralized management and orchestration for edge deployments across industries including healthcare (medical devices), manufacturing (industrial systems), telecommunications (base stations), transportation (fleet management), energy (grid equipment), and defense (secure edge systems).
 
-<MermaidDiagram 
+<MermaidDiagram
   chart={`
 graph TD
     DR[Distr Registry] --> DH[Distr Hub]
@@ -38,7 +38,9 @@ graph TD
 />
 
 <Aside type="tip">
-  Distr helps overcome typical edge challenges: resource constraints, connectivity issues, security risks, hardware variability, and complex lifecycle management.
+  Distr helps overcome typical edge challenges: resource constraints,
+  connectivity issues, security risks, hardware variability, and complex
+  lifecycle management.
 </Aside>
 
 [Read the implementation guide →](/docs/guides/implementation/edge-deployment-guide)
