--- a/src/content/docs/docs/guides/implementation/assisted-self-managed-deployment-guide.mdx
+++ b/src/content/docs/docs/guides/implementation/assisted-self-managed-deployment-guide.mdx
@@ -25,22 +25,22 @@ Before implementing this model, ensure you have:
   chart={`
 graph TD
 
-  subgraph Vendor_Environment
-    hub[Distr Hub]
-    reg[Distr Registry]
-    stor[PostgreSQL]
-    hub --> reg
-    stor --> hub
-  end
+subgraph Vendor_Environment
+hub[Distr Hub]
+reg[Distr Registry]
+stor[PostgreSQL]
+hub --> reg
+stor --> hub
+end
 
-  subgraph Customer_Environment
-    customer[End Customer]
-    dockerAgent[Docker Agent]
-    helmAgent[Helm Agent]
-    tfAgent[Terraform Agent]
-    vmApp[App on VM]
-    k8sApp[App on Kubernetes]
-    infra[Terraform Infra]
+subgraph Customer_Environment
+customer[End Customer]
+dockerAgent[Docker Agent]
+helmAgent[Helm Agent]
+tfAgent[Terraform Agent]
+vmApp[App on VM]
+k8sApp[App on Kubernetes]
+infra[Terraform Infra]
 
     hub --> dockerAgent
     hub --> helmAgent
@@ -54,7 +54,8 @@ graph TD
     helmAgent --> k8sApp
     tfAgent --> infra
     reg --> tfAgent
-  end
+
+end
 `}
 />
 
@@ -62,80 +63,88 @@ graph TD
 
 <Steps>
 1. **Set Up Your Registry**
-
-   Configure your Distr Registry to host and manage your application artifacts:
-   
-   - Navigate to the Registry section in Distr Hub
-   - Configure your artifact storage settings
-   - Configure access controls for specific customers
-
 2. **Onboard Your Application**
-   
-   Prepare your application for agent-based deployments:
-
-   <Tabs>
-   <TabItem label="Docker Application">
-   - Package your application as Docker images
-   - Create a Docker Compose template
-   - Identify environment variables for customer configuration
-   - [Follow the Docker application onboarding guide](/docs/guides/platform-management/onboarding-a-docker-app/)
-   </TabItem>
-   <TabItem label="Kubernetes Application">
-   - Package your application as Helm charts
-   - Document Helm values for customer configuration
-   - Define default configurations
-   - [Follow the Helm application onboarding guide](/docs/guides/platform-management/onboarding-a-helm-app/)
-   </TabItem>
-   </Tabs>
-
 3. **Configure Agent Settings**
-   
-   Prepare deployment agent configurations:
-   
-   - Navigate to the Agents section in Distr Hub
-   - Configure agent permissions (typically limited to application updates)
-   - Set notification preferences for new versions
-   - Configure update approval settings (customer approval required)
-   - Define monitoring and logging parameters
-
 4. **Prepare Customer Environment**
-   
-   Work with your customer to prepare their environment:
-   
-   - Identify deployment target (virtual machines, Kubernetes clusters)
-   - Confirm network requirements for agent communication
-   - Verify outbound connectivity to Distr Registry
-   - Document any infrastructure prerequisites
-
 5. **Customer Onboarding Process**
-   
-   Guide your customer through the agent setup:
-   
-   - Create customer credentials in Distr Hub
-   - Generate agent installation tokens
-   - Provide installation documentation
-   - Assist with initial agent deployment
-   - Verify agent connectivity to Distr Hub
-
 6. **Initial Application Deployment**
-   
-   Deploy the application through the agent:
-   
-   - Guide the customer through selecting the application in their portal
-   - Assist with environment-specific configuration
-   - Initiate the initial deployment
-   - Verify successful installation
-   - Confirm monitoring and logging are functioning
-
 7. **Establish Update Workflow**
-   
-   Create a process for delivering updates:
-   
-   - Define your update notification process
-   - Document the update approval workflow
-   - Test the update process with a minor version change
-   - Create procedures for handling update failures
 </Steps>
+
+### 1. Set Up Your Registry
+
+Configure your Distr Registry to host and manage your application artifacts:
+
+- Navigate to the Registry section in Distr Hub
+- Configure your artifact storage settings
+- Configure access controls for specific customers
+
+### 2. Onboard Your Application
+
+Prepare your application for agent-based deployments:
+
+<Tabs>
+<TabItem label="Docker Application">
+- Package your application as Docker images
+- Create a Docker Compose template
+- Identify environment variables for customer configuration
+- [Follow the Docker application onboarding guide](/docs/guides/platform-management/onboarding-a-docker-app/)
+</TabItem>
+<TabItem label="Kubernetes Application">
+- Package your application as Helm charts
+- Document Helm values for customer configuration
+- Define default configurations
+- [Follow the Helm application onboarding guide](/docs/guides/platform-management/onboarding-a-helm-app/)
+</TabItem>
+</Tabs>
+
+### 3. Configure Agent Settings
+
+Prepare deployment agent configurations:
+
+- Navigate to the Agents section in Distr Hub
+- Configure agent permissions (typically limited to application updates)
+- Set notification preferences for new versions
+- Configure update approval settings (customer approval required)
+- Define monitoring and logging parameters
+
+### 4. Prepare Customer Environment
+
+Work with your customer to prepare their environment:
+
+- Identify deployment target (virtual machines, Kubernetes clusters)
+- Confirm network requirements for agent communication
+- Verify outbound connectivity to Distr Registry
+- Document any infrastructure prerequisites
+
+### 5. Customer Onboarding Process
+
+Guide your customer through the agent setup:
+
+- Create customer credentials in Distr Hub
+- Generate agent installation tokens
+- Provide installation documentation
+- Assist with initial agent deployment
+- Verify agent connectivity to Distr Hub
+
+### 6. Initial Application Deployment
+
+Deploy the application through the agent:
+
+- Guide the customer through selecting the application in their portal
+- Assist with environment-specific configuration
+- Initiate the initial deployment
+- Verify successful installation
+- Confirm monitoring and logging are functioning
+
+### 7. Establish Update Workflow
+
+Create a process for delivering updates:
+
+- Define your update notification process
+- Document the update approval workflow
+- Test the update process with a minor version change
+- Create procedures for handling update failures
 
 ## Agent Installation
 
@@ -175,7 +184,8 @@ Explain to your customers that the agent:
 - Only performs actions explicitly permitted in its configuration
 
 <Aside type="tip">
-  Create an agent security document for customer security teams, detailing the agent's permissions and communication patterns.
+  Create an agent security document for customer security teams, detailing the
+  agent's permissions and communication patterns.
 </Aside>
 
 ## Update Notification Workflow
@@ -204,4 +214,3 @@ After implementing the Assisted Self-Managed model, you might want to:
 - [Configure advanced monitoring](/docs/product/vendor-portal/#monitoring) for deployed applications
 - [Set up automated health checks](/docs/product/vendor-portal/#health-checks) for proactive issue detection
 - [Implement usage analytics](/docs/product/vendor-portal/#analytics) to understand feature adoption
-
